# TS-Api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  assets_manifest.json  build.js  package.json  tsconfig.json  types.d.ts
.github/workflows/: push-docker-image.yaml
src/: app.ts  index.ts  main.rs  mysql.ts  s3.ts  sql.ts  version.ts
src/api/controllers/: auth.controller.ts  launcher.controller.ts
src/api/middlewares/: authJwtVerify.ts
src/api/routes/: IRoutes.ts  auth.routes.ts  launcher.routes.ts
src/api/services/: auth.service.ts  launcher.service.ts
src/config/: config.common.ts  config.dev.ts  config.prod.ts
src/environment/: environment.common.ts  environment.dev.ts  environment.ts
src/handlers/: launcher.rs
src/lib/: Api.ts  Got.ts  ModpackTools.ts
src/routes/: launcher.rs  mod.rs
src/socket/: SocketIo.ts
src/socket/events/: LauncherServerFile.ts  SocketEvent.ts
src/utils/: dates.ts  logs.ts  replyError.ts  verifyRequestParameter.ts
