[package]
name = "ts_api"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4"] }
serde_json = { version = "1.0.1"}
env_logger = { version = "0.10.1" }